# deployfish-mysql

./: .bumpversion.cfg  .gitignore  MANIFEST.in  Makefile  README.md  requirements.txt  setup.cfg  setup.py
deployfish_mysql/: __init__.py  mysql.py
deployfish_mysql/cli/: main.py
deployfish_mysql/cli/adapters/: mysql.py
deployfish_mysql/cli/adapters/commands/: __init__.py  mysql.py
deployfish_mysql/cli/templates/: mysqldatabase--detail.tpl
deployfish_mysql/controllers/: mysql.py
deployfish_mysql/models/: mysql.py
