[metadata]
name = deployfish-mysql
version = 1.2.13
description = Deployfish MySQL plugin
author = Caltech IMSS ADS
author_email = imss-ads-staff@caltech.edu
url = https://github.com/caltechads/deployfish-mysql
long_description = file: README.md
long_description_content_type = text/markdown; charset=UTF-8
keywords =
    aws
    ecs
    docker
    devops
    mysql
classifiers =
    Environment :: Console
    Environment :: Plugins
    Development Status :: 5 - Production/Stable
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Topic :: Database
    Topic :: System :: Installation/Setup
    Topic :: System :: Systems Administration
project_urls =
    Source = https://github.com/caltechads/deployfish-mysql
    Issues = https://github.com/caltechads/deployfish-mysql/issues

[options]
zip_safe = False
platforms = any
packages = find:
python_requires = >=3.7
include_package_data = True
install_requires =
    deployfish>=1.11.2
    click >= 7.0
    cement >= 3.0

[options.entry_points]
deployfish.plugins =
    mysql = deployfish_mysql

[bdist_wheel]
universal = 1

# -------
# Linters
# -------

[mypy]
python_executable: ~/.pyenv/shims/python
implicit_optional = True
exclude = (^build/.*$|^docs/.*\.py$|test_.*\.py$)

[mypy-jsondiff]
ignore_missing_imports = True

[mypy-shellescape]
ignore_missing_imports = True

[mypy-botocore.docs.docstring]
ignore_missing_imports = True

[mypy-cement.*]
ignore_missing_imports = True


[flake8]
max-line-length: 120
filename: *.py
exclude: *.cfg, *.js, *.json, *.bak, *.md, *.sql, *.sh, *.txt, *.yml, simple_test_db, Makefile, Dockerfile, MANIFEST.in
# E221:  multiple spaces before operator
# E241:  multiple spaces after :
# E265:  block comment should start with '# '
# E266:  too many leading '#' for block comment
# E401:  multiple imports on one line
# W503:  line break before binary operator
ignore = E221,E241,E265,E266,E401,C0321,W503

[pycodestyle]
max-line-length: 120
